# flask-authorization

./: .env.example  .gitignore  app.py  config.py  extensions.py  pyproject.toml  seed.py  seed_data.sql
api/: views.py
api/resources/: forum.py
api/schemas/: forum.py  user.py
auth/: decorators.py  helpers.py  views.py
migrations/versions/: 32416cbef5fc_.py  3f6038b121f4_.py  9211f025431c_.py  af29fd86ebf7_.py  ca71788e84d8_.py  e1a943a38a18_.py  f2802001ccd3_.py
models/: __init__.py  auth.py  forum.py  users.py
seed/: posts.sql
